--- a/desafios/templates/desafios/mes.html
+++ b/desafios/templates/desafios/mes.html
@@ -1,16 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{mes | title}}</title>
-</head>
-<body>
+{% extends '../base.html' %}
+
+{% block titlo%} 
+    {{mes | title}}
+{% endblock %}
+
+{% block conteudo %}
+{% include "desafios/includes/header.html" %}
     {% if text is not None %}
         <h2>{{text}}</h2>
     {% else %}
         <p>Mes nao tem tarefa</p>
     {% endif %}
-</body>
-</html>
+{% endblock  %}
